Задержка выставляется в конфиге. Отправка в ЛС и в чат

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# pip install requests aiogram beautifulsoup4 lxml xlwt xlrd
+# pip install requests aiogram beautifulsoup4 lxml xlwt xlrd schedule
 
 requests
 aiogram
