--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 # pip install requests aiogram beautifulsoup4 lxml xlwt xlrd schedule
 
-requests
-aiogram
-beautifulsoup4
+requests~=2.31.0
+aiogram~=2.25.1
+beautifulsoup4~=4.12.2
 lxml
-xlwt
-xlrd
-schedule
+xlwt~=1.3.0
+xlrd~=2.0.1
+openpyxl~=3.1.2
+schedule~=1.2.0
+pandas~=2.0.3
